--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -1,5 +1,8 @@
 /**
- * Jenkinsfile for Yocto-BSPs using declarative pipeline
+ * Copyright (C) 2017 - 2020 TQ Systems GmbH
+ * @author Markus Niebel <Markus.Niebel@tq-group.com>
+ * Jenkinsfile for TQ Systems Yocto-BSPs using declarative pipeline
+ * License:     GPLv2
  *
  */
 
