--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -84,6 +84,15 @@ def wipeOutBuildspace(directoryName){
     }
 }
 
+/*
+ * delete complete build dir for manual triggered builds (RELEASE) and nightly
+ * builds (timer triggered)
+ * use shell rm in favour of dir/deleteDir
+ *
+ * since version 2.24 of workflow-support plugin currentBuild.getBuildCauses()
+ * can be used. as an additional benefit - this method is whitelisted  - no need
+ * for manual script security exclusions
+ */
 def handleBuildCause(directoryName) {
     def causes = currentBuild.getBuildCauses()
     println causes.toString()
@@ -99,6 +108,20 @@ def handleBuildCause(directoryName) {
             sh "rm -rf ${directoryName}/${env.BUILD_DIR}"
         } else {
             println "build cause : " + reason
+        }
+    }
+    causes = null
+}
+
+def handleGlobalData(directoryName) {
+    def causes = currentBuild.getBuildCauses()
+
+    for(cause in causes) {
+        def reason = cause.toString()
+        cause = null
+        if (!reason.contains("SCMTriggerCause")) {
+            println "clear ${directoryName}/${env.DL_DIR} ..."
+            sh "pwd; ls -al; time rm -rf ${directoryName}/${env.DL_DIR}; ls -1"
         }
     }
     causes = null
@@ -157,26 +180,7 @@ pipeline {
                  * manageSstateCache(currentBuild.startTimeInMillis()) does not work
                  * this helps to explicit clean state cache
                  */
-                script {
-                    if (params.CLEAN_CACHES == true) {
-                        dir("${env.WORKSPACE}/shared-sstate-cache") {
-                            echo "clear ${env.WORKSPACE}/shared-sstate-cache ... (CLEAN_CACHES)"
-                            deleteDir()
-                        }
-                    }
-                    /*
-                     * unconditionally remove DL_DIR to make sure we got everything
-                     * from mirror, needed for updates of git archives
-                     */
-                    dir("${env.WORKSPACE}/shared-dl-dir") {
-                       echo "clear ${env.WORKSPACE}/shared-dl-dir ..."
-                       deleteDir()
-                    }
-                    dir("${env.WORKSPACE}") {
-                       echo "clear ${env.WORKSPACE}/ci-meta-tq.*.tar.gz ... "
-                       sh "rm -f ci-meta-tq.*.tar.gz"
-                    }
-                }
+                handleGlobalData("${env.WORKSPACE}")
             }
         }
         stage ('Prepare Workspaces') {
