ci/Jenkinsfile: use poky sstate-cache-management.sh
use sstate-cache-management.sh for nightly builds

reason: cache grows over time. need maintenance

initial cleanup @warrior: 45 min
initial cleanup @zeus:   15 min
initial cleanup @sumo-tqmls102x: 5 min

Disk usage dropped by 10% afterwards

Signed-off-by: Markus Niebel <Markus.Niebel@tq-group.com>
(cherry picked from commit 1e84ff667f68f523e4faa5dc23dcd4bd77d74576)

--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -121,6 +121,13 @@ def handleGlobalData(directoryName) {
             println "clear ${directoryName}/shared-dl-dir ..."
             sh "pwd; ls -al; time rm -rf ${directoryName}/shared-dl-dir; ls -1"
         }
+        /*
+         * for nightly builds: do sstate cache maintenance
+         */
+        if (reason.contains("TimerTriggerCause")) {
+            println "maintain ${directoryName}/${env.SSTATE_DIR} ..."
+            sh "time ${directoryName}/CONFIGS/minimal/sources/poky/scripts/sstate-cache-management.sh --cache-dir=${directoryName}/shared-sstate-cache --extra-layer=${directoryName}/CONFIGS/minimal/sources/meta-tq -d -y"
+        }
     }
     causes = null
 
