sources: add meta-arm as new submodule
newer meta-ti depends on it

Signed-off-by: Markus Niebel <Markus.Niebel@tq-group.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -26,3 +26,7 @@
 	path = sources/meta-ti
 	url = https://git.yoctoproject.org/git/meta-ti
 	branch = master
+[submodule "sources/meta-arm"]
+	path = sources/meta-arm
+	url = https://git.yoctoproject.org/git/meta-arm
+	branch = master
