Add new template  and build config for Layerscape / Qoriq
- bblayers.conf with meta-freescale
- default image tq-image-generic
- default distro poky
- remove LS based boards from minimal config (needs recipes and setting from meta-freescale)

Signed-off-by: Markus Niebel <Markus.Niebel@tq-group.com>

--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -176,6 +176,7 @@ pipeline {
          * workspace name for config must be identical to config name
          */
         WS_IMX = "CONFIGS/imx"
+        WS_LS = "CONFIGS/ls"
         WS_MIN = "CONFIGS/minimal"
         WS_TI = "CONFIGS/ti"
         DL_DIR = "shared-dl-dir"
@@ -201,6 +202,10 @@ pipeline {
                         wipeOutBuildspace("${env.WS_IMX}")
                         prepareWorkspace("${env.WS_IMX}")
                     },
+                    "ls" : {
+                        wipeOutBuildspace("${env.WS_LS}")
+                        prepareWorkspace("${env.WS_LS}")
+                    },
                     "minimal" : {
                         wipeOutBuildspace("${env.WS_MIN}")
                         prepareWorkspace("${env.WS_MIN}")
@@ -218,6 +223,9 @@ pipeline {
                     "imx" : {
                         handleBuildCause("${env.WS_IMX}")
                     },
+                    "ls" : {
+                        handleBuildCause("${env.WS_LS}")
+                    },
                     "minimal" : {
                         handleBuildCause("${env.WS_MIN}")
                     },
@@ -233,6 +241,9 @@ pipeline {
                     "imx" : {
                         checkoutMetaLayers("${env.WS_IMX}")
                     },
+                    "ls" : {
+                        checkoutMetaLayers("${env.WS_LS}")
+                    },
                     "minimal" : {
                         checkoutMetaLayers("${env.WS_MIN}")
                     },
@@ -247,6 +258,9 @@ pipeline {
                 parallel (
                     "imx" : {
                         buildConfiguration("${env.WS_IMX}")
+                    },
+                    "imx" : {
+                        buildConfiguration("${env.WS_LS}")
                     },
                     "minimal" : {
                         buildConfiguration("${env.WS_MIN}")
@@ -271,6 +285,8 @@ pipeline {
         success {
             archiveArtifacts artifacts: "${env.WS_IMX}/${env.BUILD_DIR}/${env.DEPLOY_DIR}/*"
             wipeOutBuildspace("${env.WS_IMX}")
+            archiveArtifacts artifacts: "${env.WS_LS}/${env.BUILD_DIR}/${env.DEPLOY_DIR}/*"
+            wipeOutBuildspace("${env.WS_LS}")
             archiveArtifacts artifacts: "${env.WS_MIN}/${env.BUILD_DIR}/${env.DEPLOY_DIR}/*"
             wipeOutBuildspace("${env.WS_MIN}")
             archiveArtifacts artifacts: "${env.WS_TI}/${env.BUILD_DIR}/${env.DEPLOY_DIR}/*"
