.gitmodules: add missing branch infos
some submodule actions seems to fail without branch info in
submodules file if there is no default / master branch.

Signed-off-by: Markus Niebel <Markus.Niebel@tq-group.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -33,15 +33,20 @@
 [submodule "sources/meta-browser"]
 	path = sources/meta-browser
 	url = https://github.com/OSSystems/meta-browser.git
+	branch = "zeus"
 [submodule "sources/meta-rust"]
 	path = sources/meta-rust
 	url = https://github.com/meta-rust/meta-rust.git
+	branch = "master"
 [submodule "sources/meta-timesys"]
 	path = sources/meta-timesys
 	url = https://github.com/TimesysGit/meta-timesys.git
+	branch = "zeus"
 [submodule "sources/meta-qt5"]
 	path = sources/meta-qt5
 	url = https://github.com/meta-qt5/meta-qt5.git
+	branch = "zeus"
 [submodule "sources/meta-imx"]
 	path = sources/meta-imx
 	url = https://source.codeaurora.org/external/imx/meta-imx
+	branch = "zeus-5.4.3-1.0.0"
