--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -154,7 +154,7 @@ def handleGlobalData(directoryName) {
  */
 pipeline {
     agent {
-        label 'master'
+        label 'yocto-tqma8'
     }
 
     options {
