ci: pass YOCTO_VERSION as preferred revision name to git-revision-name.sh
Because of the way git-revision-name.sh handles its argument, we can
just pass it unconditionally. If YOCTO_VERSION is unset, an empty string
will be passed and git-revision-name.sh will fall back to its default
logic.

Signed-off-by: Matthias Schiffer <matthias.schiffer@tq-group.com>
(cherry picked from commit f9ec1272ae68435561153a812abc120eda568027)

--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -269,7 +269,7 @@ pipeline {
             steps {
                 script {
                     checkoutMetaLayers("${env.WORKSPACE}")
-                    sh "export STAMP=\$(${env.WORKSPACE}/ci/git-revision-name.sh) && ${env.WORKSPACE}/ci/git-archive-all.sh --format tar.gz --prefix ci-meta-tq.\${STAMP}/ ci-meta-tq.\${STAMP}.tar"
+                    sh "export STAMP=\$(${env.WORKSPACE}/ci/git-revision-name.sh \"${env.YOCTO_VERSION}\") && ${env.WORKSPACE}/ci/git-archive-all.sh --format tar.gz --prefix ci-meta-tq.\${STAMP}/ ci-meta-tq.\${STAMP}.tar"
                 }
             }
         }
