--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -179,6 +179,7 @@ pipeline {
         WS_LS = "CONFIGS/ls"
         WS_MIN = "CONFIGS/minimal"
         WS_TI = "CONFIGS/ti"
+        WS_TQ = "CONFIGS/tq"
         DL_DIR = "shared-dl-dir"
         SSTATE_DIR = "shared-sstate-cache"
         BUILD_DIR = "buildspace"
@@ -214,6 +215,10 @@ pipeline {
                         wipeOutBuildspace("${env.WS_TI}")
                         prepareWorkspace("${env.WS_TI}")
                     },
+                    "tq" : {
+                        wipeOutBuildspace("${env.WS_TQ}")
+                        prepareWorkspace("${env.WS_TQ}")
+                    },
                 )
             }
         }
@@ -231,6 +236,9 @@ pipeline {
                     },
                     "ti" : {
                         handleBuildCause("${env.WS_TI}")
+                    },
+                    "tq" : {
+                        handleBuildCause("${env.WS_TQ}")
                     },
                 )
             }
@@ -250,6 +258,9 @@ pipeline {
                     "ti" : {
                         checkoutMetaLayers("${env.WS_TI}")
                     },
+                    "tq" : {
+                        checkoutMetaLayers("${env.WS_TQ}")
+                    },
                 )
             }
         }
@@ -267,6 +278,9 @@ pipeline {
                     },
                     "ti" : {
                         buildConfiguration("${env.WS_TI}")
+                    },
+                    "tq" : {
+                        buildConfiguration("${env.WS_TQ}")
                     },
                 )
             }
@@ -291,6 +305,8 @@ pipeline {
             wipeOutBuildspace("${env.WS_MIN}")
             archiveArtifacts artifacts: "${env.WS_TI}/${env.BUILD_DIR}/${env.DEPLOY_DIR}/*"
             wipeOutBuildspace("${env.WS_TI}")
+            archiveArtifacts artifacts: "${env.WS_TQ}/${env.BUILD_DIR}/${env.DEPLOY_DIR}/*"
+            wipeOutBuildspace("${env.WS_TQ}")
             archiveArtifacts artifacts: "ci-meta-tq.*.tar.gz"
         }
         unstable {
