.gitmodules: use branch dunfell for meta-arm
master is not longer compatible to zeus

Signed-off-by: Markus Niebel <Markus.Niebel@tq-group.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -25,4 +25,4 @@
 [submodule "sources/meta-arm"]
 	path = sources/meta-arm
 	url = https://git.yoctoproject.org/git/meta-arm
-	branch = master
+	branch = dunfell
