Removed submodule meta-arm
Signed-off-by: Vitaly Kuzmichev <vkuzmichev@dev.rtsoft.ru>

--- a/.gitmodules
+++ b/.gitmodules
@@ -25,11 +25,7 @@
 [submodule "sources/meta-ti"]
 	path = sources/meta-ti
 	url = https://git.yoctoproject.org/git/meta-ti
-	branch = master
-[submodule "sources/meta-arm"]
-	path = sources/meta-arm
-	url = https://git.yoctoproject.org/git/meta-arm
-	branch = master
+	branch = zeus
 [submodule "sources/meta-linaro"]
 	path = sources/meta-linaro
 	url = https://git.linaro.org/openembedded/meta-linaro
