ci: disable Jenkins submodule handling
Jenkins's submodule handling easily breaks when switching between
different clones of ci-meta-tq (that refer to different clones of the
submodules through relative paths).

Our Jenkinsfile already contains manual submodule handling, so there is
no harm in disabling the builtin handling.

Signed-off-by: Matthias Schiffer <matthias.schiffer@tq-group.com>

--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -54,7 +54,7 @@ def prepareWorkspace(directoryName){
         doGenerateSubmoduleConfigurations: false,
         extensions: [
             [$class: 'SubmoduleOption',
-                disableSubmodules: false,
+                disableSubmodules: true,
                 parentCredentials: true,
                 recursiveSubmodules: true,
                 reference: '',
