--- a/.gitmodules
+++ b/.gitmodules
@@ -30,3 +30,6 @@
 	path = sources/meta-linaro
 	url = https://git.linaro.org/openembedded/meta-linaro
 	branch = zeus
+[submodule "sources/meta-arm"]
+	path = sources/meta-arm
+	url = git://git.yoctoproject.org/meta-arm
