--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -32,8 +32,11 @@ def checkoutMetaLayers(directoryName) {
         sshagent(['jenkins-master-key']) {
             sh """
             git submodule sync
+            git submodule foreach --recursive git clean -fdx
+            git submodule foreach --recursive git checkout .
             git submodule update --init
             git submodule foreach --recursive git clean -fdx
+            git submodule foreach --recursive git checkout .
             git clean -fdx sources templates
             git clean -fx"""
         }
@@ -53,7 +56,7 @@ def prepareWorkspace(directoryName){
         doGenerateSubmoduleConfigurations: false,
         extensions: [
             [$class: 'SubmoduleOption',
-                disableSubmodules: false,
+                disableSubmodules: true,
                 parentCredentials: true,
                 recursiveSubmodules: true,
                 reference: '',
