ci/Jenkinsfile: wrap fetch stage with ssh agent
Signed-off-by: Markus Niebel <Markus.Niebel@tq-group.com>

--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -292,7 +292,9 @@ pipeline {
             steps {
                 parallel (
                     "imx" : {
-                        mirrorConfiguration("${env.WS_IMX}")
+                        sshagent(['jenkins-master-key']) {
+                            mirrorConfiguration("${env.WS_IMX}")
+                        }
                     },
                 )
             }
