ci/Jenkinsfile: enable timestamps
Signed-off-by: Markus Niebel <Markus.Niebel@tq-group.com>

--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -204,6 +204,7 @@ pipeline {
                        numToKeepStr: '10')
         )
         disableConcurrentBuilds()
+        timestamps()
     }
     triggers {
             cron('H H(0-4) * * *')
