ci/Jenkinsfile: enable timestamps
Signed-off-by: Markus Niebel <Markus.Niebel@tq-group.com>

--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -199,6 +199,7 @@ pipeline {
                        numToKeepStr: '10')
         )
         disableConcurrentBuilds()
+        timestamps()
     }
 
     triggers {
