ci/Jenkinsfile: add mirror / fetch step
Add new step calling ci/buildall with mirror mode
Do the work in separate build dir for following reason:

When building from sstate cache, fetch is not needed. As a result
the shared DL_DIR will be empty. Since fetch stage forces a fetch
for all packages, the stage local DL_DIR of fetch can be used to
fill global DL_DIR.

When creating source mirror, DL_DIR is needed as reference. Only
files that can be found in deployed sources and DL_DIR may go
into the source mirror archive.

Signed-off-by: Markus Niebel <Markus.Niebel@tq-group.com>

--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -71,6 +71,18 @@ def prepareWorkspace(directoryName){
             url: "${env.GIT_URL}"
         ]]
     ])
+    echo "create shared DL_DIR ${env.WORKSPACE}/${env.DL_DIR} ..."
+    sh "mkdir -p ${env.WORKSPACE}/${env.DL_DIR}"
+}
+
+def mirrorConfiguration(directoryName) {
+    dir("${directoryName}") {
+        sshagent(['jenkins-master-key']) {
+           echo "create mirror packages for all machines of config ${directoryName} ..."
+           sh "./ci/build-all ${env.BUILD_DIR}-mirror \$(basename \$(pwd)) mirror"
+           sh "cp -ruv ${env.BUILD_DIR}-mirror/downloads/* ${env.WORKSPACE}/${env.DL_DIR}"
+        }
+    }
 }
 
 def buildConfiguration(directoryName) {
@@ -188,6 +200,7 @@ pipeline {
         )
         disableConcurrentBuilds()
     }
+
     triggers {
             cron('H H(0-4) * * *')
             pollSCM('''# Alle fünf Minuten von 7.00-20.00 an jedem Wochentag
@@ -272,6 +285,24 @@ pipeline {
                     },
                     "ti" : {
                         checkoutMetaLayers("${env.WS_TI}")
+                    },
+                )
+            }
+        }
+        stage ('Fetch'){
+            steps {
+                parallel (
+                    "imx" : {
+                        mirrorConfiguration("${env.WS_IMX}")
+                    },
+                    "ls" : {
+                        mirrorConfiguration("${env.WS_LS}")
+                    },
+                    "minimal" : {
+                        mirrorConfiguration("${env.WS_MIN}")
+                    },
+                    "ti" : {
+                        mirrorConfiguration("${env.WS_TI}")
                     },
                 )
             }
