ci/Jenkinsfile: fix mirror stage
We need to delete the mirror workspace before actual start the
mirroring. When copying the downloads afterwards to the shared
download dir otherwise old files may slip in.

Signed-off-by: Markus Niebel <Markus.Niebel@tq-group.com>

--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -75,10 +75,17 @@ def prepareWorkspace(directoryName){
     sh "mkdir -p ${env.WORKSPACE}/${env.DL_DIR}"
 }
 
+/**********************************************************************/
+/* create missing mirror packages using build-all script.             */
+/* use separate build directory since other config options are used   */
+/* clean mirror build dir to prevent old downloads are copied into    */
+/* shared dl dir                                                      */
+/**********************************************************************/
 def mirrorConfiguration(directoryName) {
     dir("${directoryName}") {
         sshagent(['jenkins-master-key']) {
            echo "create mirror packages for all machines of config ${directoryName} ..."
+           sh "rm -rf ${env.BUILD_DIR}-mirror"
            sh "./ci/build-all ${env.BUILD_DIR}-mirror \$(basename \$(pwd)) mirror"
            sh "cp -ruv ${env.BUILD_DIR}-mirror/downloads/* ${env.WORKSPACE}/${env.DL_DIR}"
         }
