--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -163,11 +163,9 @@ def handleGlobalData(directoryName) {
          * update submodules before
          */
         if (reason.contains("TimerTriggerCause")) {
-        /*
             println "maintain ${directoryName}/${env.SSTATE_DIR} ..."
             checkoutMetaLayers("${directoryName}")
-            sh "time ${directoryName}/sources/poky/scripts/sstate-cache-management.sh --cache-dir=${directoryName}/${env.SSTATE_DIR} --extra-layer=${directoryName}/sources/meta-tq -d -y"
-        */
+            sh "time ${directoryName}/sources/poky/scripts/sstate-cache-management.sh --cache-dir=${directoryName}/${env.SSTATE_DIR} -d -y"
         }
     }
     causes = null
